# WS_v1

./: .cproject  .gitmodules  .mxproject  .project  Makefile  Readme.md  STM32H563xx_FLASH.ld  STM32H563xx_RAM.ld  TrackingFW Default.launch  TrackingFirmWare.ioc  at.md  configne.json  next_prompt.md  prompt.md  prompt_new.md  test_usbttl.py
Core/Inc/: main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: gpio.c  i2c.c  lptim.c  main.c  rtc.c  spi.c  stm32h5xx_it.c  tim.c  usart.c  usb.c
Documents/: Datasheet_SHT3x_DIS.md  SPS30_dust_sensor (1).md  Tracking.txt  Tracking_Test_Report.xlsx  a7677s.md  a76xx_at_cmd.md  bno055.md  gps_gp02_aithinker.md  tracking.drawio  ze12a-electrochemical-module-manual-v1_0.md
SynaptiX_FDK/: synaptix.mk
SynaptiX_FDK/BOOTLOADER_WS/: .mxproject  BOOTLOADER_WS.ioc  CMakeLists.txt  Makefile  STM32H563xx_FLASH.ld  STM32H563xx_RAM.ld  build.bat  readme.md
SynaptiX_FDK/BOOTLOADER_WS/TUSB/: tusb_config.h  usb_descriptors.c
SynaptiX_FDK/BOOTLOADER_WS/bootloader/: CMakeLists.txt  boot_debug.h  boot_err.h  boot_flash.c  boot_flash.h  bootloader.c  bootloader.h  flash_define.h  logger.c  logger.h  new_boot_backup_reg.c  new_boot_backup_reg.h  new_bootloader.c  new_bootloader.h  new_magic_flash.h
SynaptiX_FDK/BOOTLOADER_WS/cmake/: gcc-arm-none-eabi.cmake
SynaptiX_FDK/BOOTLOADER_WS/libs/: CMakeLists.txt
SynaptiX_FDK/app/: app.c  app.h  app_config.h  sx_config.h
SynaptiX_FDK/board/: sx_board.c  sx_board.h
SynaptiX_FDK/components/a76xx/: a7677.h  a7677s.c  a7677s.h  sim76xx.c  sim76xx.h
SynaptiX_FDK/components/i2c/: sx_i2c.c
SynaptiX_FDK/components/imu/: bno055.h
SynaptiX_FDK/components/modem/: modem.c  modem.h
SynaptiX_FDK/components/modem_ops/: modem_ops.h
SynaptiX_FDK/components/sim76xx/: sim76xx.c
SynaptiX_FDK/components/spi/: sx_spi.c  sx_spi.h
SynaptiX_FDK/components/timer/: sx_timer.c  sx_timer.h
SynaptiX_FDK/components/usb_cdc_tiny/: sx_usb_tiny_cdc.c  sx_usb_tiny_cdc.h  tusb_config.h  usb_descriptor.c
SynaptiX_FDK/services/OS/: sx_os.c  sx_os.h
SynaptiX_FDK/services/cJSON/: cJSON.c
(+136 files in other folders)
